@@ -26,6 +26,9 @@
 
 #include "CoreFoundation/CFRuntime.h"
 #include "CoreFoundation/CFCharacterSet.h"
+#include "CoreFoundation/CFDictionary.h"
+#include "CoreFoundation/CFString.h"
+#include "GSPrivate.h"
 
 #include <unicode/uset.h>
 
@@ -36,12 +39,27 @@ struct __CFCharacterSet
 };
 
 static CFTypeID _kCFCharacterSetTypeID = 0;
+static CFMutableDictionaryRef _kCFCharacterSetPredefinedSets = NULL;
+static GSMutex _kCFCharacterSetLock;
 
 static void
 CFCharacterSetFinalize (CFTypeRef cf)
 {
   CFCharacterSetRef cs = (CFCharacterSetRef)cf;
   uset_close (cs->_uset);
+}
+
+static Boolean
+CFCharacterSetEqual (CFTypeRef cf1, CFTypeRef cf2)
+{
+  return uset_equals (((CFCharacterSetRef)cf1)->_uset,
+    ((CFCharacterSetRef)cf2)->_uset);
+}
+
+static CFHashCode
+CFCharacterSetHash (CFTypeRef cf)
+{
+  return uset_size (((CFCharacterSetRef)cf)->_uset);
 }
 
 static const CFRuntimeClass CFCharacterSetClass =
@@ -51,8 +69,8 @@ static const CFRuntimeClass CFCharacterSetClass =
   NULL,
   (CFTypeRef (*)(CFAllocatorRef, CFTypeRef))CFCharacterSetCreateCopy,
   CFCharacterSetFinalize,
-  NULL,
-  NULL,
+  CFCharacterSetEqual,
+  CFCharacterSetHash,
   NULL,
   NULL
 };
@@ -60,7 +78,10 @@ static const CFRuntimeClass CFCharacterSetClass =
 void CFCharacterSetInitialize (void)
 {
   _kCFCharacterSetTypeID = _CFRuntimeRegisterClass (&CFCharacterSetClass);
+  GSMutexInitialize (&_kCFCharacterSetLock);
 }
+
+
 
 CFTypeID
 CFCharacterSetGetTypeID (void)
@@ -68,30 +89,91 @@ CFCharacterSetGetTypeID (void)
   return _kCFCharacterSetTypeID;
 }
 
+#define CFCHARACTERSET_SIZE \
+  (sizeof(struct __CFCharacterSet) - sizeof(CFRuntimeBase))
+
 CFCharacterSetRef
 CFCharacterSetCreateCopy (CFAllocatorRef alloc, CFCharacterSetRef set)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_clone (set->_uset);
+      uset_freeze (new->_uset);
+    }
+  
+  return new;
 }
 
 CFCharacterSetRef
 CFCharacterSetCreateInvertedSet (CFAllocatorRef alloc, CFCharacterSetRef set)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_clone (set->_uset);
+      uset_complement (new->_uset);
+      uset_freeze (new->_uset);
+    }
+  
+  return new;
 }
 
 CFCharacterSetRef
 CFCharacterSetCreateWithCharactersInRange (CFAllocatorRef alloc,
   CFRange range)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_open ((UChar32)range.location,
+        (UChar32)(range.location + range.length));
+      uset_freeze (new->_uset);
+    }
+  
+  return new;
+}
+
+static void
+USetAddString (USet *set, CFStringRef string)
+{
+  UniChar *str;
+  CFIndex len;
+  
+  len = CFStringGetLength (string);
+  str = CFAllocatorAllocate (NULL, sizeof(UniChar) * len, 0);
+  CFStringGetCharacters (string, CFRangeMake(0, len), str);
+  
+  uset_addString (set, str, len);
+  
+  CFAllocatorDeallocate (NULL, str);
 }
 
 CFCharacterSetRef
 CFCharacterSetCreateWithCharactersInString (CFAllocatorRef alloc,
   CFStringRef string)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_openEmpty ();
+      USetAddString (new->_uset, string);
+      uset_freeze (new->_uset);
+    }
+  
+  return new;
 }
 
 CFCharacterSetRef
@@ -117,7 +199,7 @@ CFCharacterSetCreateBitmapRepresentation (CFAllocatorRef alloc,
 Boolean
 CFCharacterSetIsCharacterMember (CFCharacterSetRef set, UniChar c)
 {
-  return false;
+  return (Boolean)uset_contains (set->_uset, (UChar32)c);
 }
 
 Boolean
@@ -129,14 +211,14 @@ CFCharacterSetHasMemberInPlane (CFCharacterSetRef set, CFIndex plane)
 Boolean
 CFCharacterSetIsLongCharacterMember (CFCharacterSetRef set, UTF32Char c)
 {
-  return false;
+  return (Boolean)uset_contains (set->_uset, (UChar32)c);
 }
 
 Boolean
 CFCharacterSetIsSupersetOfSet (CFCharacterSetRef set,
   CFCharacterSetRef otherSet)
 {
-  return false;
+  return uset_containsAll (set->_uset, otherSet->_uset);
 }
 
 
@@ -144,58 +226,87 @@ CFCharacterSetIsSupersetOfSet (CFCharacterSetRef set,
 CFMutableCharacterSetRef
 CFCharacterSetCreateMutable (CFAllocatorRef alloc)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_openEmpty ();
+    }
+  
+  return new;
 }
 
 CFMutableCharacterSetRef
 CFCharacterSetCreateMutableCopy (CFAllocatorRef alloc, CFCharacterSetRef set)
 {
-  return NULL;
+  struct __CFCharacterSet *new;
+  
+  new = (struct __CFCharacterSet*)_CFRuntimeCreateInstance (alloc,
+    _kCFCharacterSetTypeID, CFCHARACTERSET_SIZE, 0);
+  if (new)
+    {
+      new->_uset = uset_cloneAsThawed (set->_uset);
+    }
+  
+  return new;
 }
 
 void
 CFCharacterSetAddCharactersInRange (CFMutableCharacterSetRef set,
   CFRange range)
 {
-  
+  uset_addRange (set->_uset, (UChar32)range.location,
+    (UChar32)(range.location + range.length));
 }
 
 void
 CFCharacterSetAddCharactersInString (CFMutableCharacterSetRef set,
   CFStringRef string)
 {
-  
+  USetAddString (set->_uset, string);
 }
 
 void
 CFCharacterSetRemoveCharactersInRange (CFMutableCharacterSetRef set,
   CFRange range)
 {
-  
+  uset_removeRange (set->_uset, (UChar32)range.location,
+    (UChar32)(range.location + range.length));
 }
 
 void
 CFCharacterSetRemoveCharactersInString (CFMutableCharacterSetRef set,
   CFStringRef string)
 {
+  UniChar *str;
+  CFIndex len;
   
+  len = CFStringGetLength (string);
+  str = CFAllocatorAllocate (NULL, sizeof(UniChar) * len, 0);
+  CFStringGetCharacters (string, CFRangeMake(0, len), str);
+  
+  uset_removeString (set->_uset, str, len);
+  
+  CFAllocatorDeallocate (NULL, str);
 }
 
 void
 CFCharacterSetIntersect (CFMutableCharacterSetRef set,
   CFCharacterSetRef otherSet)
 {
-  
+  uset_retainAll (set->_uset, otherSet->_uset);
 }
 
 void
 CFCharacterSetInvert (CFMutableCharacterSetRef set)
 {
-  
+  uset_complement (set->_uset);
 }
 
 void
 CFCharacterSetUnion (CFMutableCharacterSetRef set, CFCharacterSetRef otherSet)
 {
-  
+  uset_addAll (set->_uset, otherSet->_uset);
 }
